Modified the formatting

--- a/QuranTilawat/app/src/main/res/layout/content_quran_play_list.xml
+++ b/QuranTilawat/app/src/main/res/layout/content_quran_play_list.xml
@@ -33,6 +33,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/StopButton"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/PauseButton"
         android:text="Stop"/>
