--- a/QuranTilawat/app/src/main/res/layout/content_quran_play_list.xml
+++ b/QuranTilawat/app/src/main/res/layout/content_quran_play_list.xml
@@ -14,7 +14,7 @@
     tools:showIn="@layout/activity_quran_play_list">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:id="@+id/AyatImageView"/>
     <Button
